--- a/frontend/src/global/global.css
+++ b/frontend/src/global/global.css
@@ -14,6 +14,11 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
+    overflow: hidden;
+    margin: 0;
+}
+html {
+    overflow: hidden;
 }
 
 @media screen and (min-width: 1200px) {}
